--- a/depps.html
+++ b/depps.html
@@ -6,8 +6,8 @@
   <title>Depp's</title>
 
   <!-- css and responsive -->
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/responsive.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/responsive.css">
 
   <!-- tab logo -->
   <link rel="icon" href="/assets/images/icons/depps-header-logo.svg" type="image/icon"  />
