--- a/depps.html
+++ b/depps.html
@@ -5,24 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Depp's</title>
 
-  <!-- css and responsive -->
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="/assets/css/responsive.css">
-
-  <!-- tab logo -->
-  <link rel="icon" href="/assets/images/icons/depps-header-logo.svg" type="image/icon"  />
-
-  <!-- bootstrap  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-  <!-- bootstarp icon -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- favicon -->
+  <link rel="icon" href="assets/images/icons/deeps.ico" type="image/icon"  />
 
   <!-- font-family (inter) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  
+  <!-- bootstarp icon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+  <!-- bootstrap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- css and responsive -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/responsive.css" />
+  
 </head>
 <body>
 
@@ -30,9 +30,9 @@
   <nav class="navbar  navbar-expand-lg navigation ">
     <div class="container-fluid nav-scroll">
       <a herf="javascript:void(0)" class="navbar-brand py-0 header-logo ">
-          <img src="/assets/images/icons/depps-header-logo.svg" alt="Deep's"  class="img-fluid depps-header-logo" />
+          <img src="assets/images/icons/depps-header-logo.svg" alt="Deep's"  class="img-fluid depps-header-logo" />
       </a>           
-      <button onclick="menubar()" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button onclick="menubar()"  class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="fa fa-bars navbar-toggler-icon "></span>
       </button>
       <div class="collapse navbar-collapse  justify-content-end align-self-end" id="navbarSupportedContent">
@@ -77,11 +77,11 @@
 <section class="features">
   <div class="container">
     <div class="row justify-content-between">
-      <div class="col-12 col-lg-7">
+      <div class="col-12 col-lg-7 d-flex justify-content-center justify-content-lg-start">
         <picture>
-          <source type="image/webp" srcset="/assets/images/artboard.webp">
-          <source type="image/jpg" srcset="/assets/images/artboard.png">
-          <img loading="lazy" data-src="/assets/images/artboard.png" width="583" height="489" alt="service" title="service" class="img-fluid">
+          <source type="image/webp" srcset="assets/images/artboard.webp">
+          <source type="image/jpg" srcset="assets/images/artboard.png">
+          <img loading="lazy" data-src="assets/images/artboard.png" width="583" height="489" alt="service" title="service" class="img-fluid">
         </picture>
       </div>
       <div class="col-12 col-lg-5 advantage">
@@ -95,7 +95,7 @@
           <p class="feature-ctn fw-normal">By tracking movement through the supply chain, everyone involved gains visibility, building trust with consumers who increasingly demand transparency in their food choices</p>
         </div>
         <div>
-          <h4 class="feature-head fw-medium">DePPs empower small farmers</h4>
+          <h4 class="feature-head fw-medium small-farmers">DePPs empower small farmers</h4>
           <p class="deeps-empower fw-normal">DePPs ensure ALL food, regardless of brand, has a trackable "passport" for origin & and quality</p>
         </div>
         <p class="Transparency fw-medium">Transparency wins, not labels.</p>
@@ -107,15 +107,15 @@
 <section class="how-and-supplychain">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-5 how-ctn">
+      <div class="col-12 col-lg-5 how-ctn order-lg-1 order-2">
         <h5 class="how fw-medium">HOW</h5>
         <p class="technology fw-medium">DePPs gathers data from IoT devices, compliance records, farmers/on-ground teams, and validators, securely storing it on the blockchain for transparent and immutable traceability</p>
       </div>
-      <div class="col-12 col-lg-7">
+      <div class="col-12 col-lg-7 order-lg-2 order-1 d-flex justify-content-center justify-content-lg-start">
         <picture>
-         <source type="image/webp" srcset="/assets/images/art-board-steps.webp">
-         <source type="image/jpg" srcset="/assets/images/art-board-steps.png">
-         <img loading="lazy" data-src="/assets/images/art-board-steps.png" width="678" height="601" alt="supply-chain" title="supply-chain" class="img-fluid">
+         <source type="image/webp" srcset="assets/images/art-board-steps.webp">
+         <source type="image/jpg" srcset="assets/images/art-board-steps.png">
+         <img loading="lazy" data-src="assets/images/art-board-steps.png" width="678" height="601" alt="supply-chain" title="supply-chain" class="img-fluid">
         </picture>
       </div>
     </div>
@@ -126,10 +126,10 @@
   <div class="container ">
     <div class="row ">
       <div class="col-12 col-lg-7 d-flex justify-content-center ">
-        <picture class="satellite-artboard">
-          <source type="image/webp" srcset="/assets/images/satellite.webp">
-          <source type="image/jpg" srcset="/assets/images/satellite.png">
-          <img loading="lazy" data-src="/assets/images/satellite.png" width="431" height="577" alt="satellite" title="Satellite" class="img-fluid">
+        <picture>
+          <source type="image/webp" srcset="assets/images/satellite.webp">
+          <source type="image/jpg" srcset="assets/images/satellite.png">
+          <img loading="lazy" data-src="assets/images/satellite.png" width="431" height="577" alt="satellite" title="Satellite" class="img-fluid">
         </picture>
       </div>
       <div class="col-12 col-lg-5">
@@ -145,21 +145,21 @@
 </section>
 
 <section class="where-and-worldmap">
-   <div class="container">
-     <div class="d-flex flex-column flex-lg-row">
-      <div class="row">
-       <div class="col-12 col-lg-3"> 
+  <div class="container">
+    <div class="d-flex flex-column flex-lg-row">
+      <div class="row order-lg-1 order-2">
+       <div class="col-12 col-lg-3 "> 
         <div>
           <h5 class="where fw-medium">WHERE</h5>
           <p class="where-ctn fw-medium">DePPs is being implemented in countries like Colombia, Indonesia, and China, where the agricultural industry seeks enhanced traceability solutions to meet consumer demand for transparency and safety in food supply chains.</p>
         </div>
        </div>
       </div>
-      <div class="map">
+      <div class="map order-lg-2 order-1">
         <picture>
-          <source type="image/webp" srcset="/assets/images/world-map.webp">
-          <source type="image/jpg" srcset="/assets/images/world-map.png">
-          <img loading="lazy" data-src="/assets/images/world-map.png" width="851" height="449" alt="world-map" title="World-map" class="img-fluid  h-100 " >
+          <source type="image/webp" srcset="assets/images/world-map.webp">
+          <source type="image/jpg" srcset="assets/images/world-map.png">
+          <img loading="lazy" data-src="assets/images/world-map.png" width="851" height="449" alt="world-map" title="World-map" class="img-fluid  h-100 " >
         </picture>
       </div>
     </div>
@@ -171,18 +171,20 @@
       <div class="farmsent-container">
         <div class="row">
           <div class="col-12 col-lg-7 ">
+          <a href="https://www.farmsent.io/" target="_blank">
             <picture>
-              <source type="image/webp" srcset="/assets/images/icons/farmsent-logo.webp">
-              <source type="image/jpg" srcset="/assets/images/icons/farmsent-logo.png">
-              <img loading="lazy" data-src="/assets/images/icons/farmsent-logo.png" width="478px" height="93px" alt="framsent" title="framsent" class="img-fluid farmsent-logo">
-            </picture>    
+              <source type="image/webp" srcset="assets/images/icons/farmsent-logo.webp">
+              <source type="image/jpg" srcset="assets/images/icons/farmsent-logo.png">
+              <img loading="lazy" data-src="assets/images/icons/farmsent-logo.png" width="478px" height="93px" alt="framsent" title="framsent" class="img-fluid farmsent-logo">
+            </picture>
+          </a>    
           </div>
           <div class="col-12 col-lg-5">
              <h5 class="about-farmsent fw-medium">ABOUT FARMSENT</h5>
              <p class="fw-normal farmsent-ctn">Farmsent is a farmer's blockchain aimed at revolutionizing the way food is traded and ensuring global food security. By leveraging blockchain technology, Farmsent streamlines the food supply chain, reducing the number of intermediaries involved, leading to lower prices, enhanced environmental stewardship, and increased transparency.</p>
              <p class="fw-normal farmsent-ctn">With Farmsent, farmers can set their prices and sell directly to consumers, empowering them to earn more and ultimately making farming a more profitable and sustainable profession.</p>
-             <a href="javascript:void(0)" class="text-decoration-none farmsent-io fw-bold d-flex">farmsent.io
-              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="27" viewBox="0 0 21 27" fill="currentColor" class="align-self-end">
+             <a href="https://www.farmsent.io/" class="text-decoration-none farmsent-io fw-bold d-flex">farmsent.io
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="27" viewBox="0 0 21 27" fill="currentColor" class="align-self-end ">
                 <path d="M17.493 17.2152C17.493 17.6472 17.157 17.9928 16.737 17.9928H4.263C3.843 17.9928 3.507 17.6472 3.507 17.2152V4.3848C3.507 3.9528 3.843 3.6072 4.263 3.6072H9.177V2.052H4.263C3.003 2.052 1.995 3.0888 1.995 4.3848V17.2152C1.995 18.5112 3.003 19.548 4.263 19.548H16.737C17.997 19.548 19.005 18.5112 19.005 17.2152V12.1608H17.493V17.2152Z" fill="currentColor"/>
                 <path d="M11.823 2.052V3.6072H16.422L10.479 9.72L11.55 10.8216L17.493 4.7088V9.4392H19.005V2.052H11.823Z" fill="currentColor"/>
               </svg>
@@ -196,7 +198,7 @@
 <section class="depps-client">
     <div class="container">
       <div>
-        <h5 class="patners fw-medium">Partners</h5>
+        <h5 class="patners fw-medium">PARTNERS</h5>
         <div class="row client-logo">
             <div class="col-6 col-lg-3">
               <a href="javascript:void(0)" class="client">
@@ -356,17 +358,17 @@
       <div class="col-12 col-lg-7 order-lg-1 order-2">
         <div class="depps-footer-logo">
           <picture>
-            <source type="image/webp" srcset="/assets/images/depps-footer-logo.webp">
-            <source type="image/jpg" srcset="/assets/imagesdepps-footer-logo.png">
-            <img loading="lazy" data-src="/assets/imagesdepps-footer-logo.png" width="203" height="53" alt="depps-logo" title="depps-logo" class="img-fluid depps-footer-icon">
+            <source type="image/webp" srcset="assets/images/depps-footer-logo.webp">
+            <source type="image/jpg" srcset="assets/imagesdepps-footer-logo.png">
+            <img loading="lazy" data-src="assets/imagesdepps-footer-logo.png" width="203" height="53" alt="depps-logo" title="depps-logo" class="img-fluid depps-footer-icon">
           </picture>
         </div>
         <div class="d-flex flex-column contact-us-and-email justify-content-center">
           <p class="contact-us fw-medium">Contact us</p>
-          <a href="javascript:void(0)" class="text-decoration-none contact-us fw-medium">hello@farmsent.io</a>
+          <a href="mailto:hello@farmsent.io" class="text-decoration-none contact-us fw-medium">hello@farmsent.io</a>
         </div>
         <div class="address-and-copyright d-flex flex-column" >
-          <p class="address-and-details fw-normal">38th Floor, Media One Hotel - Office Tower, Dubai Media City,<span class="d-lg-block">PO Box 334069, Dubai, United Arab Emirates</span></p>
+          <p class="address-and-details fw-normal">38th Floor, Media One Hotel - Office Tower, Dubai Media City,<span class="d-lg-block"> PO Box 334069, Dubai, United Arab Emirates</span></p>
           <div class="d-flex">
            <p class="address-and-details fw-normal copyright">© Farmsent FZCO</p>
            <p class="address-and-details fw-normal reserve">All Rights Reserved</p>
@@ -375,9 +377,9 @@
       </div>
       <div class="col-12 col-lg-5 order-lg-2 order-1 d-flex justify-content-center justify-content-lg-start">
         <picture>
-          <source type="image/webp" srcset="/assets/images/payment-scan.webp">
-          <source type="image/jpg" srcset="/assets/images/payment-scan.png">
-          <img loading="lazy" data-src="/assets/images/payment-scan.png" width="446" height="431" alt="payment-scan" title="payment-scan" class="img-fluid">
+          <source type="image/webp" srcset="assets/images/payment-scan.webp">
+          <source type="image/jpg" srcset="assets/images/payment-scan.png">
+          <img loading="lazy" data-src="assets/images/payment-scan.png" width="446" height="431" alt="payment-scan" title="payment-scan" class="img-fluid">
         </picture>
       </div>
     </div>
@@ -398,8 +400,8 @@
    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
   </script>
   
+  <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
  
   <!-- scroll behaviour -->
   <script>
@@ -416,6 +418,7 @@
 
   <!-- onclick event navbar -->
   <script>
+    function menubar(){
     function addBackgroundColor() {
     document.getElementById("header").style.backgroundColor = "rgba(253, 248, 245, 0.9)";
     }
@@ -431,6 +434,7 @@
         addBackgroundColor();
       }
     });
+    }
   </script>
 
   <!-- top-up btn -->
