--- a/depps.html
+++ b/depps.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-<header class="sticky-header" id="header"  >
+<header class="sticky-header" id="header">
   <nav class="navbar  navbar-expand-lg navigation ">
     <div class="container-fluid nav-scroll">
       <a herf="javascript:void(0)" class="navbar-brand py-0 header-logo ">
@@ -159,7 +159,7 @@
         <picture>
           <source type="image/webp" srcset="assets/images/world-map.webp">
           <source type="image/jpg" srcset="assets/images/world-map.png">
-          <img loading="lazy" data-src="assets/images/world-map.png" width="851" height="449" alt="world-map" title="World-map" class="img-fluid  h-100 " >
+          <img loading="lazy" data-src="assets/images/world-map.png" width="851" height="449" alt="world-map" title="World-map" class="img-fluid  h-100 w-100 " >
         </picture>
       </div>
     </div>
