--- a/depps.html
+++ b/depps.html
@@ -76,14 +76,14 @@
 <section class="features">
   <div class="container">
     <div class="row justify-content-between">
-      <div class="col-12 col-lg-7 d-flex justify-content-center justify-content-lg-start">
+      <div class="col-12 col-lg-7 d-flex justify-content-center justify-content-lg-start order-lg-1 order-2">
         <picture>
           <source type="image/webp" srcset="assets/images/artboard.webp">
           <source type="image/jpg" srcset="assets/images/artboard.png">
           <img loading="lazy" data-src="assets/images/artboard.png" width="583" height="489" alt="service" title="service" class="img-fluid">
         </picture>
       </div>
-      <div class="col-12 col-lg-5 advantage">
+      <div class="col-12 col-lg-5 advantage order-lg-2 order-1">
         <div>
           <h5 class="why fw-medium">WHY</h5>
           <h4 class="feature-head fw-medium">Food Safety & Quality</h4>
@@ -106,11 +106,11 @@
 <section class="how-and-supplychain">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-5 how-ctn order-lg-1 order-2">
+      <div class="col-12 col-lg-5 how-ctn ">
         <h5 class="how fw-medium">HOW</h5>
         <p class="technology fw-medium">DePPs gathers data from IoT devices, compliance records, farmers/on-ground teams, and validators, securely storing it on the blockchain for transparent and immutable traceability</p>
       </div>
-      <div class="col-12 col-lg-7 order-lg-2 order-1 d-flex justify-content-center justify-content-lg-start">
+      <div class="col-12 col-lg-7 d-flex justify-content-center justify-content-lg-start">
         <picture>
          <source type="image/webp" srcset="assets/images/art-board-steps.webp">
          <source type="image/jpg" srcset="assets/images/art-board-steps.png">
@@ -124,14 +124,14 @@
 <section class="satellite">
   <div class="container ">
     <div class="row ">
-      <div class="col-12 col-lg-7 d-flex justify-content-center ">
+      <div class="col-12 col-lg-7 order-lg-1 order-2 d-flex justify-content-center satellite-image">
         <picture>
           <source type="image/webp" srcset="assets/images/satellite.webp">
           <source type="image/jpg" srcset="assets/images/satellite.png">
           <img loading="lazy" data-src="assets/images/satellite.png" width="431" height="577" alt="satellite" title="Satellite" class="img-fluid">
         </picture>
       </div>
-      <div class="col-12 col-lg-5">
+      <div class="col-12 col-lg-5 order-lg-2 order-1">
         <h5 class="join-the-movement fw-medium">JOIN THE MOVEMENT</h5>
         <p class="join-the-movement-ctn fw-medium">DePPS representing a paradigm shift for decentralized transparency in the agricultural industry.</p>
         <div class="d-flex join-and-connect-button">
@@ -146,7 +146,7 @@
 <section class="where-and-worldmap">
   <div class="container">
     <div class="d-flex flex-column flex-lg-row">
-      <div class="row order-lg-1 order-2">
+      <div class="row">
        <div class="col-12 col-lg-3 "> 
         <div>
           <h5 class="where fw-medium">WHERE</h5>
@@ -154,7 +154,7 @@
         </div>
        </div>
       </div>
-      <div class="map order-lg-2 order-1">
+      <div class="map">
         <picture>
           <source type="image/webp" srcset="assets/images/world-map.webp">
           <source type="image/jpg" srcset="assets/images/world-map.png">
@@ -354,7 +354,7 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-7 order-lg-1 order-2">
+      <div class="col-12 col-lg-7">
         <div class="depps-footer-logo">
           <picture>
             <source type="image/webp" srcset="assets/images/depps-footer-logo.webp">
@@ -374,7 +374,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-5 order-lg-2 order-1 d-flex justify-content-center justify-content-lg-start">
+      <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-start">
         <picture>
           <source type="image/webp" srcset="assets/images/payment-scan.webp">
           <source type="image/jpg" srcset="assets/images/payment-scan.png">
